railway-service-frontend-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: railway-service-frontend-deployment
  labels:
    app: railway-service-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: railway-service-frontend
  ### This is for pods ###
  template:
    metadata:
      labels:
        app: railway-service-frontend
    spec:
      containers:
      - name: railway-service-nginx
        image: hansana12332/railway-system-nginx:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: railway-service-frontend-sevice
spec:
  selector:
    app: railway-service-frontend
#  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 81
      targetPort: 80
#      nodePort: 30000
